--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-streamlit
-tensorflow
-numpy
-Pillow
-matplotlib
-scikit-learn
-opencv-python
+python ==3.12.4
+streamlit version == 1.45.0
+pip install numpy
+pip install pandas
+pip install Pillow
+pip install opencv-python
+pip install matplotlib
+pip install tensorflow
+keras
+
