--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-python ==3.12.4
-streamlit version == 1.45.0
-pip install numpy
-pip install pandas
-pip install Pillow
-pip install opencv-python
-pip install matplotlib
-pip install tensorflow
+python==3.12.4
+streamlit==1.45.0
+numpy
+pandas
+Pillow
+opencv-python
+matplotlib
+tensorflow
 keras
-
